fix(dana-hirshal): restore back button visibility on form steps

--- a/css/_dana-hirshal-airport-transfers.sass
+++ b/css/_dana-hirshal-airport-transfers.sass
@@ -275,6 +275,7 @@ header.dana-hirshal
     .buttons
 
         button.back 
+            display: block
             background: none
             border: none
             cursor: pointer
